Fix JDK HttpClient and Vertx test cases, add more logging to HttpFaultInjectingTests