@@ -47,6 +47,8 @@
 
       --add-reads com.azure.storage.blob.changefeed=com.azure.http.netty
       --add-reads com.azure.storage.blob.changefeed=com.azure.core.http.okhttp
+      --add-reads com.azure.storage.blob.changefeed=com.azure.core.http.jdk.httpclient
+      --add-reads com.azure.storage.blob.changefeed=com.azure.core.http.vertx
     </javaModulesSurefireArgLine>
     <parallelizeLiveTests>concurrent</parallelizeLiveTests>
   </properties>
