@@ -51,6 +51,8 @@
 
       --add-reads com.azure.storage.file.datalake=com.azure.http.netty
       --add-reads com.azure.storage.file.datalake=com.azure.core.http.okhttp
+      --add-reads com.azure.storage.file.datalake=com.azure.core.http.jdk.httpclient
+      --add-reads com.azure.storage.file.datalake=com.azure.core.http.vertx
     </javaModulesSurefireArgLine>
     <parallelizeLiveTests>concurrent</parallelizeLiveTests>
   </properties>
