@@ -45,6 +45,8 @@
       --add-opens com.azure.storage.queue/com.azure.storage.queue.models=ALL-UNNAMED
       --add-reads com.azure.storage.queue=com.azure.http.netty
       --add-reads com.azure.storage.queue=com.azure.core.http.okhttp
+      --add-reads com.azure.storage.queue=com.azure.core.http.jdk.httpclient
+      --add-reads com.azure.storage.queue=com.azure.core.http.vertx
     </javaModulesSurefireArgLine>
     <parallelizeLiveTests>concurrent</parallelizeLiveTests>
   </properties>
